third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_field.no-opt.exp

Diagnostics:
error: cannot mutably borrow since immutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_field.move:27:17
   │
26 │         let f = &v.f;
   │                 ----
   │                 ││
   │                 │previous local borrow
   │                 used by field borrow
27 │         let s = &mut v; // error in v2
   │                 ^^^^^^ mutable borrow attempted here
28 │         *f;
   │         -- requirement enforced here
29 │         *s;
30 │         *f;
   │         -- conflicting reference `f` used here

error: cannot mutably borrow since immutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_field.move:27:17
   │
26 │         let f = &v.f;
   │                 ----
   │                 ││
   │                 │previous local borrow
   │                 used by field borrow
27 │         let s = &mut v; // error in v2
   │                 ^^^^^^ mutable borrow attempted here
28 │         *f;
29 │         *s;
   │         -- requirement enforced here
30 │         *f;
   │         -- conflicting reference `f` used here
